# orchard-simulator

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  REVIEWER_BRIEF.md  SECURITY.md  WRITEUP.md  build-wasm-parallel.sh  build-wasm.sh
.github/workflows/: ci.yml  deploy.yml  pages.yml
deploy/: README.md  install.sh  orchard-deploy.service  orchard-deploy.timer  orchard.rotko.net.nginx.conf
src/: halo2_circuit.rs  halo2_shim.rs  halo2_simulator.rs  lib.rs  orchard_action.rs  wasm_halo2.rs  wasm_orchard.rs  wasm_orchard_parallel.rs
tests/: halo2_byte_structure.rs  halo2_joint_distribution.rs  halo2_statistical.rs  orchard_statistical.rs
web/: CNAME  coi-serviceworker.js  foundations.html  halo2-worker.js  halo2.html  halo2.js  index.html  nav.js  orchard-worker-parallel.js  orchard-worker.js  orchard.html  orchard.js  reference.html  serve.py  style.css
